crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc1_final_fantasy.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-001-MMC1/Final Fantasy.nes
rom_sha256=0ff550e8b264fb0e608708e4ce9123321a738bdf851e9e0b28a988e28840e1f8
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=1a58fdf3a2c59cc6
checkpoint f600 fb_fnv1a64=9c86c2a081293fe5
