crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc1_ninja_gaiden.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-001-MMC1/Ninja Gaiden.nes
rom_sha256=b3095c0a3d3f1f2a73008e2a509cf2f0d567f7e4440d4edc0684135a0e9f405f
frames=600
fb_bytes=245760
cycles=17838520
audio_samples=439524
audio_fnv1a64=981cc6bb6dc9592c
checkpoint f600 fb_fnv1a64=a63416563715e13d
