crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc2_mike_tyson_punch_out.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-009-MMC2/Mike Tyson's Punch-Out!!.nes
rom_sha256=8ddfc0adf7d4f59964d5cbbd0e46e4ee102d2074c0f505f0d09ec88ea4f7d419
frames=600
fb_bytes=245760
cycles=17838554
audio_samples=439524
audio_fnv1a64=bee1bc738c0ffe0f
checkpoint f600 fb_fnv1a64=616737e63a1d19ea
