crates/rustynes-test-harness/tests/snapshots/external_real_games__external_mmc3_kirbys_adventure.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-004-MMC3/Kirby's Adventure.nes
rom_sha256=bccef5fe64261045d75688e3d503e41908de23012c0fdfc1eb29139087dfb143
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=ee447ebd18048753
checkpoint f600 fb_fnv1a64=0b44a5e14d4ba60b
